<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dill.project.MainActivity">

    <Spinner
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:id="@+id/items"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/items2"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp" />

    <Spinner
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:id="@+id/items2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/items"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp" />

    <Button
        android:text="@string/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:onClick="menu"
        app:layout_constraintRight_toLeftOf="@+id/gen" />

    <Button
        android:text="@string/generate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/gen"
        app:layout_constraintLeft_toRightOf="@+id/menu"
        app:layout_constraintBaseline_toBaselineOf="@+id/menu"
        android:onClick="get"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintRight_toLeftOf="@+id/check" />

    <Button
        android:text="@string/check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/check"
        app:layout_constraintLeft_toRightOf="@+id/gen"
        app:layout_constraintBaseline_toBaselineOf="@+id/gen"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:visibility="invisible"
        android:onClick="check"
        app:layout_constraintHorizontal_weight="1" />

    <Button
        android:text="@string/solution"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/sol"
        app:layout_constraintLeft_toRightOf="@+id/gen"
        app:layout_constraintBaseline_toBaselineOf="@+id/gen"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:visibility="invisible"
        android:onClick="sol"
        app:layout_constraintHorizontal_weight="2"/>

    <EditText
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/answer"
        app:layout_constraintBottom_toTopOf="@+id/gen"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:hint="@string/edit_text_hint"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/scrollView2"
        app:layout_constraintTop_toBottomOf="@+id/items"
        app:layout_constraintBottom_toTopOf="@+id/answer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:text="@string/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:scrollbars="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />
    </ScrollView>

</android.support.constraint.ConstraintLayout>